fixed some PMD remarks